feat: added dtos for update and create. Added mapper. Added purchase to api.yml
