# src/main/java/com/example/products/dto/ProductUpdateDto.java
@@ -1,0 +1,22 @@
+package com.example.products.dto;
+
+import javax.validation.constraints.NotBlank;
+import javax.validation.constraints.NotNull;
+import javax.validation.constraints.Positive;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class ProductUpdateDto {
+
+    @NotBlank(message = "Product name is required")
+    private String name;
+
+    @NotNull(message = "Price is required")
+    @Positive(message = "Price must be positive")
+    private Double price;
+}
